--- a/pom.xml
+++ b/pom.xml
@@ -19,4 +19,11 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>com.github.livesense</groupId>
+            <artifactId>org.liveSense.jdbc.mysql</artifactId>
+            <version>1.0.5</version>
+        </dependency>
+    </dependencies>
 </project>
