--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,23 @@
         </plugins>
     </build>
     <dependencies>
+
         <dependency>
-            <groupId>com.github.livesense</groupId>
-            <artifactId>org.liveSense.jdbc.mysql</artifactId>
-            <version>1.0.5</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>6.0.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>mchange-commons-java</artifactId>
+            <version>0.2.12</version>
         </dependency>
     </dependencies>
 </project>
